# tauri-dashboard

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.trae/rules/: git-commit-message.md
docs/: desktop-system-dashboard-implementation.md  desktop-system-dashboard-requirements.md
scripts/: generate-palette.js  visual-regression.test.js
src/: App.css  App.tsx  index.css  theme-palette.json  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dashboard.rs  lib.rs  snapshot_types.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src/components/: BrightnessSection.tsx  CpuGpuSection.tsx  DiskSection.tsx  ErrorBanner.tsx  MemorySection.tsx  MetricLine.tsx  NetworkSection.tsx  VolumeSection.tsx
